@@ -36,6 +36,13 @@ or character data nested into the element.</p>
       exist in the current project</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">status</td>
+    <td valign="top">Exit using the specified status code;
+      assuming the generated Exception is not caught, the
+      JVM will exit with this status. <em>Since Ant 1.7</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h3>Parameters specified as nested elements</h3>
